macro per la sezione glossario, più due riferimenti a inizio documento

--- a/doc/util/hx-macro.sty
+++ b/doc/util/hx-macro.sty
@@ -1,14 +1,15 @@
 % Macro utili per uniformare il contenuto del testo
 % da usare tramite il comando \usepackage{../../util/hx-macro}
 
-% Progetto
+% Progetto:
 \newcommand{\proj}{\emph{SWEDesigner}}
 \newcommand{\hx}{Hivex}
 \newcommand{\repo}{\url{https://github.com/hivex-unipd/swedesigner}}
 \newcommand{\email}{\href{mailto:hivex.team@gmail.com}{hivex.team@gmail.com}}
-\newcommand{\scopo}{Scopo del progetto \emph{\proj{}} proposto dall'azienda \ZU{} è la realizzazione di un'applicazione web che permetta di progettare applicazioni che implementino giochi da tavolo, utilizzando le notazione grafiche dell'UML. La nostra applicazione si occupa di generare il generare e fornire all'utente il codice corrispondente alla progettazione del gioco da tavolo pensato dall'utente.} % modificate a piacere :) è solo una bozza
+\newcommand{\scopo}{Scopo del progetto \proj{} proposto dall'azienda \ZU{} è la realizzazione di un'applicazione web che permetta di progettare applicazioni che implementino giochi da tavolo, utilizzando le notazione grafiche dell'UML. La nostra applicazione si occupa di generare e fornire all'utente il codice corrispondente alla progettazione del gioco da tavolo pensato dall'utente.} % da modificare
+\newcommand{\presgloss}{Al fine di precisare il significato di termini ambigui e di chiarire quelli troppo specifici, alleghiamo il documento \Glossario.}
 
-% Membri del gruppo
+% Membri del gruppo:
 \newcommand{\PB}{Paolo Baracco}
 \newcommand{\LB}{Luca Bergamin}
 \newcommand{\GG}{Giorgio Giuffrè}
@@ -17,16 +18,16 @@
 \newcommand{\AZ}{Alberto Zanatta}
 \newcommand{\ALL}{Tutti i membri del gruppo \hx}
 
-% Professori e committente
+% Professori e committente:
 \newcommand{\TV}{prof. Tullio Vardanega}
 \newcommand{\RC}{prof. Riccardo Cardin}
 \newcommand{\GP}{dott. Gregorio Piccoli}
 \newcommand{\ZU}{Zucchetti S.P.A.}
 
-% Segnatura dei termini nel glossario
+% Segnatura dei termini nel glossario:
 \newcommand{\gloss}[1]{\textsc{#1}\ped{$\gamma$}}
 
-% Struttura del diario delle modifiche
+% Ambiente da usare per il diario delle modifiche:
 \newenvironment{diario}{
 \begin{table}
 	\begin{tabular}{cp{3cm}cp{5cm}}
