aggiornamento macro PdP

--- a/doc/Esterni/Piano_di_progetto/Piano_di_progetto_v_0_0_5.tex
+++ b/doc/Esterni/Piano_di_progetto/Piano_di_progetto_v_0_0_5.tex
@@ -29,10 +29,10 @@
 \end{itemize}
 
 	\subsection{Scopo del prodotto}
-	[da copiare]
+	\scopo{}
 	
 	\subsection{Glossario}
-	[da copiare]
+	\presgloss{}
 	\subsection{Riferimenti}
 		\subsubsection{Normativi}
 		\begin{itemize}
